PostgreSQL migration completed